force-app/main/default/objects/Reuters_Quotes__c/Reuters_Quotes__c.object-meta.xml
<CustomObject>
    <label>Reuters Quotes</label>
    <nameField>
        <displayFormat>RQ-{00000}</displayFormat>
        <label>Reuters Quotes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReutersQuotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>