force-app/main/default/objects/Reuters_Quotes__c/fields/Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Price_USD__c</fullName>
    <label>Price USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>