force-app/main/default/objects/Reuters_Quotes__c/fields/ProdDiff_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>ProdDiff_Display_Name__c</fullName>
    <label>ProdDiff Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>