force-app/main/default/objects/Reuters_Quotes__c/fields/QuoteAndMonth__c.field-meta.xml
<CustomField>
    <fullName>QuoteAndMonth__c</fullName>
    <formula>Quote_Display_Name__c&amp;Valid_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteAndMonth</label>
    <type>Text</type>
</CustomField>