force-app/main/default/objects/Reuters_Quotes__c/fields/Valid_Month__c.field-meta.xml
<CustomField>
    <fullName>Valid_Month__c</fullName>
    <label>Valid Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>