force-app/main/default/objects/Reuters_Quotes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quote_Name__c</columns>
    <columns>Quote_Display_Name__c</columns>
    <columns>QuoteAndMonth__c</columns>
    <columns>CurrencyCode__c</columns>
    <columns>Pricing_Date__c</columns>
    <columns>Price__c</columns>
    <columns>Price_USD__c</columns>
    <columns>Unit_Of_Measure__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Valid_Month__c</columns>
    <columns>Valid_From_Date__c</columns>
    <columns>Valid_To_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>