force-app/main/default/objects/Reuters_Quotes__c/listViews/Exchange_Rates.listView-meta.xml
<ListView>
    <fullName>Exchange_Rates</fullName>
    <columns>NAME</columns>
    <columns>Pricing_Date__c</columns>
    <columns>Quote_Display_Name__c</columns>
    <columns>Price__c</columns>
    <columns>CurrencyCode__c</columns>
    <columns>Unit_Of_Measure__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Valid_From_Date__c</columns>
    <columns>Valid_Month__c</columns>
    <columns>Valid_To_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_Display_Name__c</field>
        <operation>equals</operation>
        <value>CHF/USD,EUR/USD,ECB EUR/USD</value>
    </filters>
    <label>Exchange Rates</label>
</ListView>