force-app/main/default/objects/Reuters_Quotes__c/listViews/Freight_Quotes.listView-meta.xml
<ListView>
    <fullName>Freight_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Quote_Display_Name__c</columns>
    <columns>Price__c</columns>
    <columns>CurrencyCode__c</columns>
    <columns>Unit_Of_Measure__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Quote_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Freight Quotes</label>
</ListView>