force-app/main/default/objects/Reuters_Quotes__c/listViews/Futures_LGO_Brent_RBOB.listView-meta.xml
<ListView>
    <fullName>Futures_LGO_Brent_RBOB</fullName>
    <columns>NAME</columns>
    <columns>Quote_Display_Name__c</columns>
    <columns>Price__c</columns>
    <columns>CurrencyCode__c</columns>
    <columns>Unit_Of_Measure__c</columns>
    <columns>Pricing_Date__c</columns>
    <columns>Valid_Month__c</columns>
    <columns>Valid_From_Date__c</columns>
    <columns>Valid_To_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Frequency__c</columns>
    <columns>Quote_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valid_To_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Quote_Display_Name__c</field>
        <operation>contains</operation>
        <value>brent</value>
    </filters>
    <label>Futures LGO, Brent, RBOB</label>
</ListView>