force-app/main/default/objects/Reuters_Quotes__c/listViews/Platts_FOB_Barge_R_dam_Diesel_10ppm.listView-meta.xml
<ListView>
    <fullName>Platts_FOB_Barge_R_dam_Diesel_10ppm</fullName>
    <columns>NAME</columns>
    <columns>Quote_Display_Name__c</columns>
    <columns>Price_USD__c</columns>
    <columns>Price__c</columns>
    <columns>CurrencyCode__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_Display_Name__c</field>
        <operation>contains</operation>
        <value>Platts CIF Cargo NWE Gasoline 10ppm (high),Platts FOB Barge Eurobob (high)</value>
    </filters>
    <label>Platts FOB Barge R&apos;dam Diesel 10ppm</label>
</ListView>