force-app/main/default/objects/Reuters_Quotes__c/listViews/Platts_FOB_Barge_R_dam_Gasoil_50ppm.listView-meta.xml
<ListView>
    <fullName>Platts_FOB_Barge_R_dam_Gasoil_50ppm</fullName>
    <columns>NAME</columns>
    <columns>Quote_Display_Name__c</columns>
    <columns>Price__c</columns>
    <columns>Price_USD__c</columns>
    <columns>CurrencyCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>Platts FOB Barge R&apos;dam Gasoil 50ppm</label>
</ListView>